@@ -18,8 +18,9 @@
 #    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
+# The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.46 2003/11/03 18:36:57 jaco Exp $
+# $Id: hwdetect.in,v 1.47 2003/11/05 12:51:18 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
