@@ -18,8 +18,9 @@
 #    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
+# The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.32 2003/11/03 11:38:50 jaco Exp $
+# $Id: linuxrc.in,v 1.33 2003/11/05 12:51:18 jaco Exp $
 #
 
 ### global variables
